Set delay as rational param

--- a/tidal.cabal
+++ b/tidal.cabal
@@ -78,6 +78,7 @@ test-suite tests
   ghc-options: -Wall
   other-modules: Sound.Tidal.ControlTest
                  Sound.Tidal.CoreTest
+                 Sound.Tidal.ParamsTest
                  Sound.Tidal.ParseTest
                  Sound.Tidal.PatternTest
                  Sound.Tidal.ScalesTest
